switch to es modules from commonjs

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node backend/server",
     "serve": "nodemon backend/server",
